--- a/css/layout.css
+++ b/css/layout.css
@@ -202,6 +202,8 @@
     flex: 1;
     display: flex;
     overflow: hidden;
+    position: relative;
+    z-index: 0;
 }
 
 
